added some changes ie animations

--- a/component.html
+++ b/component.html
@@ -42,7 +42,7 @@
                 <ul>
                     <li><a class="nav-link scrollto active" href="store.html">STORE</a></li>
                     <li><a class="nav-link scrollto" href="#about">BOOKLIST</a></li>
-                    <li><a class="nav-link scrollto" href="#services">LOGOUT</a></li>
+                    <li><a class="nav-link scrollto" href="index.html">LOGOUT</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
             </nav>
@@ -100,8 +100,7 @@
                     </div>
                 </div>
             </form>
-            <div class="row">
-
+            <div class="row animate__animated animate__fadeInDown">
                 <div class="col-xl-3 col-lg-4 col-md-6">
                     <div class="member">
                         <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
