--- a/store.html
+++ b/store.html
@@ -42,7 +42,7 @@
                 <ul>
                     <li><a class="nav-link scrollto active" href="store.html">STORE</a></li>
                     <li><a class="nav-link scrollto" href="#about">BOOKLIST</a></li>
-                    <li><a class="nav-link scrollto" href="#services">LOGOUT</a></li>
+                    <li><a class="nav-link scrollto" href="index.html">LOGOUT</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
             </nav>
@@ -72,15 +72,15 @@
                             <div class="modal-body">
                                 <div class="input-group mb-3">
                                     <span class="input-group-text" id="inputGroup-sizing-default">Category Id</span>
-                                    <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+                                    <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" required>
                                 </div>
                                 <div class="input-group mb-3">
                                     <span class="input-group-text" id="inputGroup-sizing-default">Category Name</span>
-                                    <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+                                    <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" required>
                                 </div>
                                 <div class="input-group mb-3">
                                     <span class="input-group-text" id="inputGroup-sizing-default">Category Iamge</span>
-                                    <input type="file" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+                                    <input type="file" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" required>
                                 </div>
                             </div>
                             <div class="modal-footer">
@@ -91,9 +91,9 @@
                     </div>
                 </div>
             </form>
-            <div class="row portfolio-container">
+            <div class="row portfolio-container animate__animated animate__fadeInDown" >
                 <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-                    <div class="portfolio-wrap">
+                    <div class="portfolio-wrap" onclick="window.location.href='component.html'">
                         <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
                         <div class="portfolio-info">
                             <h4>App 1</h4>
@@ -107,7 +107,7 @@
                 </div>
 
                 <div class="col-lg-4 col-md-6 portfolio-item filter-web ">
-                    <div class="portfolio-wrap ">
+                    <div class="portfolio-wrap "  onclick="window.location.href='component.html'">
                         <img src="assets/img/portfolio/portfolio-2.jpg " class="img-fluid " alt=" ">
                         <div class="portfolio-info ">
                             <h4>Web 3</h4>
@@ -121,7 +121,7 @@
                 </div>
 
                 <div class="col-lg-4 col-md-6 portfolio-item filter-app ">
-                    <div class="portfolio-wrap ">
+                    <div class="portfolio-wrap "  onclick="window.location.href='component.html'">
                         <img src="assets/img/portfolio/portfolio-3.jpg " class="img-fluid " alt=" ">
                         <div class="portfolio-info ">
                             <h4>App 2</h4>
@@ -135,7 +135,7 @@
                 </div>
 
                 <div class="col-lg-4 col-md-6 portfolio-item filter-card ">
-                    <div class="portfolio-wrap ">
+                    <div class="portfolio-wrap "  onclick="window.location.href='component.html'">
                         <img src="assets/img/portfolio/portfolio-4.jpg " class="img-fluid " alt=" ">
                         <div class="portfolio-info ">
                             <h4>Card 2</h4>
@@ -149,7 +149,7 @@
                 </div>
 
                 <div class="col-lg-4 col-md-6 portfolio-item filter-web ">
-                    <div class="portfolio-wrap ">
+                    <div class="portfolio-wrap "  onclick="window.location.href='component.html'">
                         <img src="assets/img/portfolio/portfolio-5.jpg " class="img-fluid " alt=" ">
                         <div class="portfolio-info ">
                             <h4>Web 2</h4>
@@ -163,7 +163,7 @@
                 </div>
 
                 <div class="col-lg-4 col-md-6 portfolio-item filter-app ">
-                    <div class="portfolio-wrap ">
+                    <div class="portfolio-wrap "  onclick="window.location.href='component.html'">
                         <img src="assets/img/portfolio/portfolio-6.jpg " class="img-fluid " alt=" ">
                         <div class="portfolio-info ">
                             <h4>App 3</h4>
@@ -177,7 +177,7 @@
                 </div>
 
                 <div class="col-lg-4 col-md-6 portfolio-item filter-card ">
-                    <div class="portfolio-wrap ">
+                    <div class="portfolio-wrap "  onclick="window.location.href='component.html'">
                         <img src="assets/img/portfolio/portfolio-7.jpg " class="img-fluid " alt=" ">
                         <div class="portfolio-info ">
                             <h4>Card 1</h4>
@@ -191,7 +191,7 @@
                 </div>
 
                 <div class="col-lg-4 col-md-6 portfolio-item filter-card ">
-                    <div class="portfolio-wrap ">
+                    <div class="portfolio-wrap "  onclick="window.location.href='component.html'">
                         <img src="assets/img/portfolio/portfolio-8.jpg " class="img-fluid " alt=" ">
                         <div class="portfolio-info ">
                             <h4>Card 3</h4>
@@ -205,7 +205,7 @@
                 </div>
 
                 <div class="col-lg-4 col-md-6 portfolio-item filter-web ">
-                    <div class="portfolio-wrap ">
+                    <div class="portfolio-wrap "  onclick="window.location.href='component.html'">
                         <img src="assets/img/portfolio/portfolio-9.jpg " class="img-fluid " alt=" ">
                         <div class="portfolio-info ">
                             <h4>Web 3</h4>
