--- a/update-component.html
+++ b/update-component.html
@@ -42,7 +42,7 @@
                 <ul>
                     <li><a class="nav-link scrollto active" href="store.html">STORE</a></li>
                     <li><a class="nav-link scrollto" href="#about">BOOKLIST</a></li>
-                    <li><a class="nav-link scrollto" href="#services">LOGOUT</a></li>
+                    <li><a class="nav-link scrollto" href="index.html">LOGOUT</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
             </nav>
@@ -54,7 +54,7 @@
     <div class="container mt-5">
         <form action="" class="mt-5">
             <!--Edit Modal-->
-            <div class="container pt-5">
+            <div class="container pt-5 animate__animated animate__fadeInDown">
                 <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content">
                         <div class="modal-header">
