--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
 <body style="width:100%;height:100%;">
      <!-- ======= Header ======= -->
   <header id="header" class="fixed-top d-flex align-items-center bg-black">
-    <div class="container-fluid d-flex align-items-center justify-content-between">
+    <div class="container d-flex align-items-center justify-content-between">
 
       <h1 class="logo"><a href="index.html" >Pinnacle</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
