--- a/login.html
+++ b/login.html
@@ -1,7 +1,7 @@
   <html>
   <head>
     <title>Pinnacle-Login</title>
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img//apple-touch-icon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
