--- a/store.html
+++ b/store.html
@@ -91,65 +91,65 @@
                     </div>
                 </div>
             </form>
-            <div class="row portfolio-container animate__animated animate__fadeInDown" >
+            <div class="row portfolio-container animate__animated animate__fadeInDown">
                 <div class="col-lg-4 col-md-6 portfolio-item filter-app">
                     <div class="portfolio-wrap" onclick="window.location.href='component.html'">
                         <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
                         <div class="portfolio-info">
-                            <h4>App 1</h4>
-                            <p>App</p>
+                            <h4>Mechanical</h4>
+                            <p>Description.........</p>
                             <div class="portfolio-links">
                                 <a href="update-category.html" title="Edit"><i class="bx bx-edit"></i></a>
-                                <a href="#deleteModal" data-bs-toggle="modal" title="Delete"><i class="bx bx-trash"></i></a>
+                                <a href="#deleteModal1" data-bs-toggle="modal" title="Delete"><i class="bx bx-trash"></i></a>
                             </div>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-lg-4 col-md-6 portfolio-item filter-web ">
-                    <div class="portfolio-wrap "  onclick="window.location.href='component.html'">
+                    <div class="portfolio-wrap " onclick="window.location.href='component.html'">
                         <img src="assets/img/portfolio/portfolio-2.jpg " class="img-fluid " alt=" ">
                         <div class="portfolio-info ">
-                            <h4>Web 3</h4>
-                            <p>Web</p>
+                            <h4>Electrical</h4>
+                            <p>Description.........</p>
                             <div class="portfolio-links">
                                 <a href="update-category.html" title="Edit"><i class="bx bx-edit"></i></a>
-                                <a href="#deleteModal" data-bs-toggle="modal" title="Delete"><i class="bx bx-trash"></i></a>
+                                <a href="#deleteModal1" data-bs-toggle="modal" title="Delete"><i class="bx bx-trash"></i></a>
                             </div>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-lg-4 col-md-6 portfolio-item filter-app ">
-                    <div class="portfolio-wrap "  onclick="window.location.href='component.html'">
+                    <div class="portfolio-wrap " onclick="window.location.href='component.html'">
                         <img src="assets/img/portfolio/portfolio-3.jpg " class="img-fluid " alt=" ">
                         <div class="portfolio-info ">
-                            <h4>App 2</h4>
-                            <p>App</p>
+                            <h4>Electronics</h4>
+                            <p>Description.........</p>
                             <div class="portfolio-links">
                                 <a href="update-category.html" title="Edit"><i class="bx bx-edit"></i></a>
-                                <a href="#deleteModal" data-bs-toggle="modal" title="Delete"><i class="bx bx-trash"></i></a>
+                                <a href="#deleteModal1" data-bs-toggle="modal" title="Delete"><i class="bx bx-trash"></i></a>
                             </div>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-lg-4 col-md-6 portfolio-item filter-card ">
-                    <div class="portfolio-wrap "  onclick="window.location.href='component.html'">
+                    <div class="portfolio-wrap " onclick="window.location.href='component.html'">
                         <img src="assets/img/portfolio/portfolio-4.jpg " class="img-fluid " alt=" ">
                         <div class="portfolio-info ">
-                            <h4>Card 2</h4>
-                            <p>Card</p>
+                            <h4>ComputerScience</h4>
+                            <p>Description.........</p>
                             <div class="portfolio-links">
                                 <a href="update-category.html" title="Edit"><i class="bx bx-edit"></i></a>
-                                <a href="#deleteModal" data-bs-toggle="modal" title="Delete"><i class="bx bx-trash"></i></a>
+                                <a href="#deleteModal1" data-bs-toggle="modal" title="Delete"><i class="bx bx-trash"></i></a>
                             </div>
                         </div>
                     </div>
                 </div>
-
+                <!-- 
                 <div class="col-lg-4 col-md-6 portfolio-item filter-web ">
-                    <div class="portfolio-wrap "  onclick="window.location.href='component.html'">
+                    <div class="portfolio-wrap " onclick="window.location.href='component.html'">
                         <img src="assets/img/portfolio/portfolio-5.jpg " class="img-fluid " alt=" ">
                         <div class="portfolio-info ">
                             <h4>Web 2</h4>
@@ -163,7 +163,7 @@
                 </div>
 
                 <div class="col-lg-4 col-md-6 portfolio-item filter-app ">
-                    <div class="portfolio-wrap "  onclick="window.location.href='component.html'">
+                    <div class="portfolio-wrap " onclick="window.location.href='component.html'">
                         <img src="assets/img/portfolio/portfolio-6.jpg " class="img-fluid " alt=" ">
                         <div class="portfolio-info ">
                             <h4>App 3</h4>
@@ -177,7 +177,7 @@
                 </div>
 
                 <div class="col-lg-4 col-md-6 portfolio-item filter-card ">
-                    <div class="portfolio-wrap "  onclick="window.location.href='component.html'">
+                    <div class="portfolio-wrap " onclick="window.location.href='component.html'">
                         <img src="assets/img/portfolio/portfolio-7.jpg " class="img-fluid " alt=" ">
                         <div class="portfolio-info ">
                             <h4>Card 1</h4>
@@ -191,7 +191,7 @@
                 </div>
 
                 <div class="col-lg-4 col-md-6 portfolio-item filter-card ">
-                    <div class="portfolio-wrap "  onclick="window.location.href='component.html'">
+                    <div class="portfolio-wrap " onclick="window.location.href='component.html'">
                         <img src="assets/img/portfolio/portfolio-8.jpg " class="img-fluid " alt=" ">
                         <div class="portfolio-info ">
                             <h4>Card 3</h4>
@@ -205,7 +205,7 @@
                 </div>
 
                 <div class="col-lg-4 col-md-6 portfolio-item filter-web ">
-                    <div class="portfolio-wrap "  onclick="window.location.href='component.html'">
+                    <div class="portfolio-wrap " onclick="window.location.href='component.html'">
                         <img src="assets/img/portfolio/portfolio-9.jpg " class="img-fluid " alt=" ">
                         <div class="portfolio-info ">
                             <h4>Web 3</h4>
@@ -216,25 +216,25 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
             </div>
         </div>
         <form action="">
             <!--Delete Modal-->
-            <div class=" modal fade " id="deleteModal " tabindex="-1 " aria-labelledby="deleteModalLabel " aria-hidden="true ">
-                <div class="modal-dialog modal-dialog-centered ">
-                    <div class="modal-content ">
-                        <div class="modal-header ">
-                            <h4 class="modal-title " id="exampleModalLabel ">Confirmation</h4>
-                            <button type="button " class="btn-close " data-bs-dismiss="modal " aria-label="Close "></button>
+            <div class="modal fade" id="deleteModal1" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h4 class="modal-title" id="deleteModalLabel">Confirmation</h4>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
-                        <div class="modal-body ">
+                        <div class="modal-body">
                             <h5>Do you really want to delete?</h5>
                         </div>
-                        <div class="modal-footer ">
-                            <button type="button " class="btn btn-secondary " data-bs-dismiss="modal ">No</button>
-                            <button type="button " class="btn btn-success ">Yes</button>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">No</button>
+                            <button type="button" class="btn btn-success">Yes</button>
                         </div>
                     </div>
                 </div>
