--- a/component.html
+++ b/component.html
@@ -103,10 +103,10 @@
             <div class="row animate__animated animate__fadeInDown">
                 <div class="col-xl-3 col-lg-4 col-md-6">
                     <div class="member">
-                        <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
+                        <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="" style="border:1px solid black;">
                         <div class="member-info">
                             <div class="member-info-content">
-                                <h4>Component Name</h4>
+                                <h4>Arduino Board</h4>
                                 <span>Component Description</span>
                                 <div class="social">
                                     <a href="update-component.html" title="Edit"><i class="bi bi-pencil-square"></i></a>
@@ -119,10 +119,10 @@
 
                 <div class="col-xl-3 col-lg-4 col-md-6" data-wow-delay="0.1s">
                     <div class="member">
-                        <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
+                        <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="" style="border:1px solid black;">
                         <div class="member-info">
                             <div class="member-info-content">
-                                <h4>Component Name</h4>
+                                <h4>Router Cable</h4>
                                 <span>Component Description</span>
                                 <div class="social">
                                     <a href="update-component.html" title="Edit"><i class="bi bi-pencil-square"></i></a>
@@ -135,10 +135,10 @@
 
                 <div class="col-xl-3 col-lg-4 col-md-6" data-wow-delay="0.2s">
                     <div class="member">
-                        <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
+                        <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="" style="border:1px solid black;">
                         <div class="member-info">
                             <div class="member-info-content">
-                                <h4>Component Name</h4>
+                                <h4>Screw Drivers</h4>
                                 <span>Component Description</span>
                                 <div class="social">
                                     <a href="update-component.html" title="Edit"><i class="bi bi-pencil-square"></i></a>
@@ -151,10 +151,10 @@
 
                 <div class="col-xl-3 col-lg-4 col-md-6" data-wow-delay="0.3s">
                     <div class="member">
-                        <img src="assets/img/team/team-4.jpg" class="img-fluid" alt="">
+                        <img src="assets/img/team/team-4.jpg" class="img-fluid" alt="" style="border:1px solid black;">
                         <div class="member-info">
                             <div class="member-info-content">
-                                <h4>Component Name</h4>
+                                <h4>Wired Mouse</h4>
                                 <span>Component Description</span>
                                 <div class="social">
                                     <a href="update-component.html" title="Edit"><i class="bi bi-pencil-square"></i></a>
@@ -173,7 +173,7 @@
                 <div class="modal-dialog modal-dialog-centered ">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h4 class="modal-title" id="exampleModalLabel">Confirmation</h4>
+                            <h4 class="modal-title" id="deleteModalLabel">Confirmation</h4>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Clos"></button>
                         </div>
                         <div class="modal-body">
