--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <h2 class="animate__animated animate__fadeInDown"> “All our dreams can come true if we have the courage to pursue them.”</h2>
                 <p class="animate__animated animate__fadeInUp">This inspirational quote comes from the man who created the happiest place on earth – and a multibillion-dollar empire.</p>
                 <div>
-                  <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">- Walt Disney</a>
+                  <button class="btn-get-started animate__animated animate__fadeInUp scrollto" disabled>- Walt Disney</button>
                 </div>
               </div>
             </div>
@@ -77,7 +77,7 @@
                 <h2 class="animate__animated animate__fadeInDown">“Success is not final, failure is not fatal: it is the courage to continue that counts.”</h2>
                 <p class="animate__animated animate__fadeInUp">When it comes to inspirational, encouraging quotes by successful people, Winston Churchill’s words of wisdom always make the list.</p>
                 <div>
-                  <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">- Winston Churchill</a>
+                  <button class="btn-get-started animate__animated animate__fadeInUp scrollto">- Winston Churchill</button>
                 </div>
               </div>
             </div>
@@ -91,7 +91,7 @@
                 <h2 class="animate__animated animate__fadeInDown"> “You are never too old to set another goal or to dream a new dream.”</h2>
                 <p class="animate__animated animate__fadeInUp">Famous British scholar and author C.S. Lewis began writing the “The Chronicles of Narnia” series when he was 51 years old.</p>
                 <div>
-                  <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">– C.S. Lewis</a>
+                  <button class="btn-get-started animate__animated animate__fadeInUp scrollto">– C.S. Lewis</button>
                 </div>
               </div>
             </div>
