--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <div class="carousel-item active" style="background: url(assets/img/slide/slide-1.jpg);">
             <div class="carousel-container">
               <div class="carousel-content">
-                <h2 class="animate__animated animate__fadeInDown"> “All our dreams can come true if we have the courage to pursue them.”</h2>
+                <h2 class="animate__animated animate__fadeInDown"> “All our dreams can come true if <br>we have the courage to pursue them.”</h2>
                 <p class="animate__animated animate__fadeInUp">This inspirational quote comes from the man who created the happiest place on earth – and a multibillion-dollar empire.</p>
                 <div>
                   <button class="btn-get-started animate__animated animate__fadeInUp scrollto" disabled>- Walt Disney</button>
@@ -74,7 +74,7 @@
           <div class="carousel-item" style="background: url(assets/img/slide/slide-2.jpg);">
             <div class="carousel-container">
               <div class="carousel-content">
-                <h2 class="animate__animated animate__fadeInDown">“Success is not final, failure is not fatal: it is the courage to continue that counts.”</h2>
+                <h2 class="animate__animated animate__fadeInDown">“Success is not final, failure is not fatal:<br>it is the courage to continue that counts.”</h2>
                 <p class="animate__animated animate__fadeInUp">When it comes to inspirational, encouraging quotes by successful people, Winston Churchill’s words of wisdom always make the list.</p>
                 <div>
                   <button class="btn-get-started animate__animated animate__fadeInUp scrollto">- Winston Churchill</button>
