--- a/store.html
+++ b/store.html
@@ -51,7 +51,7 @@
         </div>
     </header>
     <!-- End Header -->
-    <section id="portfolio" class="portfolio">
+    <section id="portfolio" class="portfolio" style="background-color: #f1f1f1be;">
         <div class="container mt-5">
 
             <div class="section-title mt-4">
