--- a/update-category.html
+++ b/update-category.html
@@ -51,7 +51,7 @@
         </div>
     </header>
     <!-- End Header -->
-    <div class="container mt-5">
+    <div class="container mt-5" style="background-color: #f1f1f1be;">
         <form action="" class="mt-5">
             <!--Edit Modal-->
             <div class="container pt-5 animate__animated animate__fadeInDown">
