--- a/component.html
+++ b/component.html
@@ -52,7 +52,7 @@
     </header>
     <!-- End Header -->
     <!-- ======= Team Section ======= -->
-    <section id="team" class="team" style="background-color: #f1f1f1be;">
+    <section id="team" class="team" style="background-color: #f1f1f1be;width:100vw;height:100vh;">
         <div class="container mt-5">
 
             <div class="section-title mt-4">
