--- a/book-history.html
+++ b/book-history.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Groovin Bootstrap Template - Index</title>
+    <title>Pinnacle-Book History</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -42,7 +42,7 @@
             <nav id="navbar" class="navbar">
                 <ul>
                     <li><a class="nav-link scrollto active" href="store.html">STORE</a></li>
-                    <li><a class="nav-link scrollto" href="#about">BOOKLIST</a></li>
+                    <li><a class="nav-link scrollto" href="book-history.html">BOOKLIST</a></li>
                     <li><a class="nav-link scrollto" href="index.html">LOGOUT</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
