--- a/component.html
+++ b/component.html
@@ -41,6 +41,7 @@
             <nav id="navbar" class="navbar">
                 <ul>
                     <li><a class="nav-link scrollto active" href="store.html">STORE</a></li>
+                    <li><a class="nav-link scrollto" href="current-booking.html">BOOK</a></li>
                     <li><a class="nav-link scrollto" href="book-history.html">BOOKLIST</a></li>
                     <li><a class="nav-link scrollto" href="index.html">LOGOUT</a></li>
                 </ul>
